--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -2,12 +2,13 @@
 
 body {
     height: 100vh;
-   background-image: url(../media/283134.png);
-   background-size: cover;
+    background-image: url(../media/283134.png);
+    background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 0; 
 }
 
 .container {
@@ -16,6 +17,7 @@ body {
     margin:0 auto;
     text-align: center;
     align-items: center;
+    z-index: 0; 
 }
 
 .game-div {
@@ -56,6 +58,8 @@ body {
 .timer-numbers {
     line-height: 100%;
     text-align: center;
+    margin-top: 10px;
+    display: flex;
 }
 
 .score , .game-over{
@@ -84,7 +88,7 @@ body {
 /* Start button */
 /*//////////////*/
 
-.start-button {
+.start-button, .close-button  {
     background-color: rgb(222, 228, 226);
     border-radius: 7px;
     border:2px solid rgb(222, 228, 226);
@@ -108,6 +112,53 @@ body {
 
 .hidden {
     display: none;
+}
+
+/*//////////////////*/
+/*     Score table  */
+/*//////////////////*/
+
+.score-div {
+    width: 800px;
+    background-color: rgb(155, 158, 157);
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 2; 
+    padding: 30px 0;
+    border-radius: 7px;
+}
+
+tbody {
+    justify-content: space-between;
+}
+
+td {
+    width: 30%;
+    margin: 0 auto;
+}
+
+.score-button {
+    background-color: rgb(0, 0, 0);
+    color: rgb(222, 228, 226);
+    border-radius: 7px;
+    border:2px solid rgb(0, 0, 0);
+    padding: 5px 15px;
+}
+
+.score-button:hover {
+    border:2px solid rgb(222, 228, 226);
+}
+
+.close-button {
+    margin-top: 30px;
+}
+
+.close-button:hover {
+    border:2px solid rgb(0, 0, 0);
 }
 
 /*//////////////////*/
@@ -136,5 +187,14 @@ body {
 
     .start-button {
         margin:  0;
+    }
+
+    .score-div {
+        width: 80%;
+    }
+
+    table {
+        width: 100%;
+        font-size: 30px;
     }
 }
